--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-uglify": "^0.11.1",
     "jquery": "^2.2.1",
     "jquery-circle-progress": "^1.1.3",
     "lightbox2": "^2.8.2",
