--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "hexo-theme-materialize",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
-    "build": "grunt build"
+    "build": "rm -rf source/js && grunt build"
   },
   "devDependencies": {
     "font-awesome": "^4.7.0",
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-requirejs": "^1.0.0",
-    "grunt-contrib-uglify": "^3.1.0",
-    "jquery": "^3.2.1",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-terser": "^1.0.0",
+    "jquery": "^3.4.1",
     "jquery-circle-progress": "^1.2.2",
-    "lightbox2": "^2.9.0",
-    "load-grunt-tasks": "^3.5.2",
-    "materialize-css": "^0.100.2",
-    "requirejs": "^2.3.5"
+    "lightbox2": "^2.11.1",
+    "load-grunt-tasks": "^5.1.0",
+    "materialize-css": "^1.0.0",
+    "requirejs": "^2.3.6"
   }
 }
